--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Document</title>
 </head>
 <body>
+    <div class="contenedor" id="contenedor">
+        <div class="pelicula">
+            <img class="poster" src="assets/img/scale.jpg">
+            <h3 class="titulo">Juego de gemelas</h3>
+        </div>
+        <div class="pelicula">
+            <img class="poster" src="assets/img/scale.jpg">
+            <h3 class="titulo">Juego de gemelas</h3>
+        </div>
+        <div class="pelicula">
+            <img class="poster" src="assets/img/scale.jpg">
+            <h3 class="titulo">Juego de gemelas</h3>
+        </div>
+        <div class="pelicula">
+            <img class="poster" src="assets/img/scale.jpg">
+            <h3 class="titulo">Juego de gemelas</h3>
+        </div>
+    </div>
     
 
 </body>
