--- a/index.html
+++ b/index.html
@@ -9,24 +9,9 @@
 </head>
 <body>
     <div class="contenedor" id="contenedor">
-        <div class="pelicula">
-            <img class="poster" src="assets/img/scale.jpg">
-            <h3 class="titulo">Juego de gemelas</h3>
-        </div>
-        <div class="pelicula">
-            <img class="poster" src="assets/img/scale.jpg">
-            <h3 class="titulo">Juego de gemelas</h3>
-        </div>
-        <div class="pelicula">
-            <img class="poster" src="assets/img/scale.jpg">
-            <h3 class="titulo">Juego de gemelas</h3>
-        </div>
-        <div class="pelicula">
-            <img class="poster" src="assets/img/scale.jpg">
-            <h3 class="titulo">Juego de gemelas</h3>
-        </div>
+      
     </div>
     
-
+<script src="assets/js/index.js"></script>
 </body>
 </html>
