adding buttons with functions

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <div class="contenedor" id="contenedor">
       
     </div>
-    
+    <div class="paginacion">
+        <button id="btnAnterior">Anterior</button>
+        <button id="btnSiguiente">Siguiente</button>
+      </div>
 <script src="assets/js/index.js"></script>
 </body>
 </html>
